# android-ratchet

./: README.md  settings.gradle
andro_ratchet/: Cargo.toml
andro_ratchet/src/: lib.rs
app/: build.gradle
app/src/androidTest/java/edu/kit/tm/ps/arb/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/edu/kit/tm/ps/arb/: MainActivity.kt  Ratchet.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/edu/kit/tm/ps/arb/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
