[package]
name = "andro_ratchet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.0"
asym_ratchet = { path = "/home/daniel/Code/asym_ratchet" }
rand = "0.8.5"
